--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1 class="h1 animate__animated animate__flash animate__repeat-1" id="h1" >DRUMS KIT </h1>
-    <h2 class="h2" id="h2">Click or press the keyboard to play the sounds of the drum</h2>
+    <h2 class="h2" id="h2">Press the keyboard to play the sounds of the drum</h2>
     <div class="keys">
         <div data-key="65" class="key">
             <kbd>A</kbd>
